<resources>
    <string name="app_name">BlueShelt</string>
    <string name="todo">TODO</string>
    <string name="get_started">Get Started</string>
    <string name="todoo">TODO</string>
    <string name="tap_here">Tap Here</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">Your Name</string>
    <string name="email">Email</string>
    <string name="phone_hint">Phone(optional)</string>
    <string name="signin_btn">Log In</string>
    <string name="signup_btn">Sign Up</string>
    <string name="already_having_an_account_sign_in">Already having an Account? <span style="color:red">Log In</span> </string>
    <string name="signup_text">Not having an Account ? <span style="color:blue">Sign Up</span> </string>
    <string name="login_txt">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="forgot">Forgot Password?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="Residence_Type">
        <item>Residence Type</item>
        <item></item>
        <item></item>
        <item>Own</item>
        <item>Rent</item>
        <item>Company Provided</item>
        <item>PG Hostel</item>
    </string-array>

    <string-array name="Current_profession">
        <item>Current Profession</item>
        <item></item>
        <item></item>
        <item>Salary</item>
        <item>Self Employed Profession</item>
        <item>Self Employed Business</item>
    </string-array>

    <string-array name="Salary_recieved_in">
        <item>Salary Recieved In</item>
        <item></item>
        <item></item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Bank</item>
    </string-array>


</resources>