<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:background="@mipmap/ic_launcher_bg">

    <ImageView
        android:id="@+id/loginlogo"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher_shelt" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginlogo"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/editables"
        android:hint="@string/username_hint"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:textColor="@android:color/black"
        android:focusableInTouchMode="true"
        android:textColorHint="@android:color/black"/>
    <EditText
        android:id="@+id/password_login"
        android:layout_width="410dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_login"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/editables"
        android:hint="@string/password_hint"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:textColor="@android:color/black"
        android:focusableInTouchMode="true"
        android:textColorHint="@android:color/black"/>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button"
        android:text="@string/signin_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:backgroundTint="@color/shelt_color"/>

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/signup_text"/>


</RelativeLayout>